--- a/styles.css
+++ b/styles.css
@@ -1,76 +1,130 @@
 html {
-    font-family: 'Open Sans', Arial, sans-serif;
-  }
-  
-  body {
-    background-color: #efefef;
-    color: #000000;
-    line-height: 1.55;
-    min-width: 290px;
-  }
-  
-  #navbar {
-    position: fixed;
-    min-width: 290px;
-    border-right: solid;
-    border-color: rgba(23, 45, 48, 0.7);
-    height: 100%;
-    width: 300px;
-    top: 0;
-    left: 0;
-  }
-  
-  header {
-    color: black;
-    margin: 10px;
-    text-align: center;
-    font-size: 1.78em;
-    font-weight: thin;
-  }
-  
-  #navbar ul {
-    height: 88%;
-    padding: 0;
-    overflow-y: auto;
-    overflow-x: hidden;
-  }
-  
-  #navbar li {
-    color: #4d4e53;
-    list-style: none;
-    border-top: 1px solid rgba(23, 45, 48, 0.7);
-    position: relative; 
-    width: 100%;
-  }
-  
-  #navbar a {
+    font-size: 10px;
     display: block;
-    text-decoration: none;
-    padding: 10px 30px;
-    color: #4d4e53;
-    cursor: pointer;
-  }
-  
-  #main-doc header {
-    text-align: left;
+}
+
+head {
+    display: none;
+}
+
+link {
+    display: none;
+}
+
+body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif;
+    font-size: 1.6rem;
+    line-height: 1.5;
+    text-align: center;
+    color: #333;
     margin: 0;
-  }
-  
-  #main-doc {
-    position: absolute;
-    left: 330px;
-    top: 32px;
-  }
-  
-  @media only screen and (max-width: 815px) {
-    /* For mobile phones: */
-    #navbar ul {
-      border: 1px solid;
-      height: 207px;
-  }
-  
-  @media only screen and (max-width: 400px) {
-    #main-doc {
-      margin-left: -10px;
-  }
-  
+    display: block;
+}
+
+#main {
+    margin: 30px 8px;
+    padding: 15px;
+    border-radius: 5px;
+    background: #eee;
+}
+
+main {
+    display: block;
+}
+
+h1 {
+    font-size: 4rem;
+    margin-bottom: 0;
+    display: block;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
+
+p {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
+#img-div {
+    background: white;
+    padding: 10px;
+    margin: 0;
+}
+
+figure {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 40px;
+    margin-inline-end: 40px;
+}
+
+img {
+    max-width: 100%;
+    display: block;
+    height: auto;
+    margin: 0 auto;
+    overflow-clip-margin: content-box;
+    overflow: clip;
+}
+
+#img-caption {
+    margin: 15px 0 5px 0;
+}
+
+figcaption {
+    display: block;
+}
+
+section {
+    display: block;
+}
+
+h3 {
+    display: block;
+    font-size: 1.17em;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
+
+ul {
+    max-width: 550px;
+    margin: 0 auto 50px auto;
+    text-align: left;
+    line-height: 1.6;
+}
+
+li {
+    margin: 16px 0;
+    display: list-item;
+    text-align: -webkit-match-parent;
+}
+
+blockquote {
+    font-style: italic;
+    max-width: 545px;
+    margin: 0 auto 50px auto;
+    text-align: left;
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 40px;
+    margin-inline-end: 40px;
+}
+
+cite {
+    font-style: italic;
+}
+
+a:visited {
+    color: #74638f;
+}
